@@ -13,6 +13,7 @@ import org.whu.backend.common.exception.BizException;
 import org.whu.backend.dto.PageRequestDto;
 import org.whu.backend.dto.PageResponseDto;
 import org.whu.backend.dto.post.PostDetailDto;
+import org.whu.backend.dto.post.PostSearchRequestDto;
 import org.whu.backend.dto.post.PostSummaryDto;
 import org.whu.backend.dto.travelpack.PackageDetailDto;
 import org.whu.backend.dto.travelpack.PackageSearchRequestDto;
@@ -23,7 +24,7 @@ import org.whu.backend.repository.post.TravelPostRepository;
 import org.whu.backend.repository.travelRepo.TravelPackageRepository;
 import org.whu.backend.service.DtoConverter;
 import org.whu.backend.service.ViewCountService;
-import org.whu.backend.service.specification.TravelPackageSpecification;
+import org.whu.backend.service.specification.SearchSpecification;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -58,7 +59,7 @@ public class PublicService {
                 .map(dtoConverter::convertPackageToSummaryDto)
                 .collect(Collectors.toList());
 
-        return dtoConverter.convertPageToDto(packagePage,summaryDtos);
+        return dtoConverter.convertPageToDto(packagePage, summaryDtos);
     }
 
     // 获取单个旅行团的详情
@@ -100,7 +101,7 @@ public class PublicService {
                 .map(dtoConverter::convertPostToSummaryDto)
                 .collect(Collectors.toList());
 
-        return dtoConverter.convertPageToDto(postPage,dtos);
+        return dtoConverter.convertPageToDto(postPage, dtos);
     }
 
     // 实现复杂的、多条件的搜索逻辑
@@ -108,7 +109,7 @@ public class PublicService {
         log.info("开始复杂条件搜索旅行团, 搜索条件: {}", searchDto);
 
         // 1. 使用 Specification 构建动态查询条件
-        Specification<TravelPackage> spec = TravelPackageSpecification.from(searchDto);
+        Specification<TravelPackage> spec = SearchSpecification.from(searchDto);
 
         // 2. 创建分页和排序对象
         Sort sort = Sort.by(Sort.Direction.fromString(searchDto.getSortDirection()), searchDto.getSortBy());
@@ -122,13 +123,33 @@ public class PublicService {
         // 4. 转换并返回结果 (这部分逻辑不变)
         List<PackageSummaryDto> summaryDtos = packagePage.getContent().stream()
                 .map(dtoConverter::convertPackageToSummaryDto)
-                .collect(Collectors.toList());
+                .toList();
 
-        return dtoConverter.convertPageToDto(packagePage,summaryDtos);
+        return dtoConverter.convertPageToDto(packagePage, summaryDtos);
+    }
+
+    /**
+     * [新增] 实现复杂的、多条件的游记搜索逻辑
+     */
+    public PageResponseDto<PostSummaryDto> searchPosts(PostSearchRequestDto searchDto) {
+        log.info("开始复杂条件搜索游记, 搜索条件: {}", searchDto);
+
+        Specification<TravelPost> spec = SearchSpecification.from(searchDto);
+
+        Pageable pageable = PageRequest.of(searchDto.getPage() - 1, searchDto.getSize(),
+                Sort.by(Sort.Direction.fromString(searchDto.getSortDirection()), searchDto.getSortBy()));
+
+        Page<TravelPost> postPage = travelPostRepository.findAll(spec, pageable);
+
+        List<PostSummaryDto> postSummaryDtos = postPage.getContent().stream().
+                map(dtoConverter::convertPostToSummaryDto)
+                .toList();
+
+        return dtoConverter.convertPageToDto(postPage, postSummaryDtos);
     }
 
     // 获取单篇已发布的游记详情
-    public PostDetailDto getPostDetails(String postId,String ipAddress) {
+    public PostDetailDto getPostDetails(String postId, String ipAddress) {
         log.info("正在获取公共游记详情, ID: {}", postId);
 
         TravelPost post = travelPostRepository.findById(postId)
